--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10230,6 +10230,10 @@ keys:
                 type: str
                 valid_values:
                 - discard
+              import_ethernet_segment_ip_mass_withdraw:
+                type: bool
+              export_ethernet_segment_ip_mass_withdraw:
+                type: bool
           next_hop_unchanged:
             type: bool
       address_family_rtc:
