--- a/ansible_collections/arista/avd/tests/integration/targets/filter_password/tasks/main.yml
+++ b/ansible_collections/arista/avd/tests/integration/targets/filter_password/tasks/main.yml
@@ -15,3 +15,9 @@
       - "{{ ospf.clear_password | arista.avd.encrypt(passwd_type='ospf_message_digest', key=ospf.interface_name, hash_algorithm=ospf.hash_algorithm, key_id=ospf.key_id) == ospf.expected_ospf_message_digest_encrypted_password }}"
       - "{{ ospf.expected_ospf_simple_auth_encrypted_password | arista.avd.decrypt(passwd_type='ospf_simple', key=ospf.interface_name) == ospf.clear_password }}"
       - "{{ ospf.expected_ospf_message_digest_encrypted_password | arista.avd.decrypt(passwd_type='ospf_message_digest', key=ospf.interface_name, hash_algorithm=ospf.hash_algorithm, key_id=ospf.key_id) == ospf.clear_password }}"
+
+- name: Test Encrypt & Decrypt for ISIS passwords
+  ansible.builtin.assert:
+    that:
+      - "{{ isis.clear_password | arista.avd.encrypt(passwd_type='isis', key=isis.instance_name, mode=isis.mode) == isis.expected_encrypted_password }}"
+      - "{{ isis.expected_encrypted_password | arista.avd.decrypt(passwd_type='isis', key=isis.instance_name, mode=isis.mode) == isis.clear_password }}"
