--- a/ansible_collections/arista/avd/tests/integration/targets/filter_password/vars/main.yml
+++ b/ansible_collections/arista/avd/tests/integration/targets/filter_password/vars/main.yml
@@ -18,3 +18,9 @@ ospf:
   key_id: 42
   hash_algorithm: sha384
   expected_ospf_message_digest_encrypted_password: kkUHfrLewxAxiqER3KUSFQ==
+
+isis:
+  instance_name: AVDTEST
+  clear_password: arista
+  mode: sha-512
+  expected_encrypted_password: ungRXTzMFB4lTWHOt14hSA==
