Feat(eos_designs): Add 1-step Boundary Clock support

--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1016,6 +1016,14 @@ $defs:
               enabled:
                 type: bool
                 default: false
+              mode:
+                type: str
+                valid_values:
+                  - boundary
+                  - transparent
+              boundary_one_step:
+                type: bool
+                default: false
               profile:
                 type: str
                 valid_values:
