--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine3.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine3.yml
@@ -82,6 +82,7 @@ ptp:
         delay_resp: 3
         follow_up: 3
         sync: 3
+  boundary_one_step: true
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
