--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -8000,7 +8000,7 @@ keys:
         valid_values:
         - boundary
         - transparent
-      boundary_one_step:
+      mode_one_step:
         type: bool
       forward_unicast:
         type: bool
