--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ptp.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/schema_fragments/ptp.schema.yml
@@ -14,7 +14,7 @@ keys:
         valid_values:
         - boundary
         - transparent
-      boundary_one_step:
+      mode_one_step:
         type: bool
       forward_unicast:
         type: bool
