--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/eos_designs.schema.yml
@@ -7515,7 +7515,7 @@ $defs:
                 valid_values:
                 - boundary
                 - transparent
-              boundary_one_step:
+              mode_one_step:
                 type: bool
                 default: false
               profile:
