--- a/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_designs/schemas/schema_fragments/defs_node_type.schema.yml
@@ -1021,7 +1021,7 @@ $defs:
                 valid_values:
                   - boundary
                   - transparent
-              boundary_one_step:
+              mode_one_step:
                 type: bool
                 default: false
               profile:
