--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine2.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/ptp-tests-spine2.yml
@@ -96,7 +96,7 @@ ptp:
         delay_resp: 12
         follow_up: 13
         sync: 14
-  boundary_one_step: true
+  mode_one_step: true
 loopback_interfaces:
 - name: Loopback0
   description: EVPN_Overlay_Peering
