--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_SPINES.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/PTP_TESTS_SPINES.yml
@@ -10,7 +10,7 @@ spine:
     ptp:
       enabled: true
       mode: boundary
-      boundary_one_step: true
+      mode_one_step: true
 
   nodes:
     - name: ptp-tests-spine1
