--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-edge-custom-default-policy.cfg
@@ -288,20 +288,20 @@ management api http-commands
       no shutdown
 !
 management security
-   ssl profile SSL-STUN
+   ssl profile STUN-DTLS
       trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
-      certificate SSL-STUN.crt key SSL-STUN.key
+      certificate STUN-DTLS.crt key STUN-DTLS.key
 !
 stun
    client
       server-profile INET-cv-pathfinder-pathfinder-Ethernet1
          ip address 10.7.7.7
-         ssl profile SSL-STUN
+         ssl profile STUN-DTLS
       server-profile INET-cv-pathfinder-pathfinder-Ethernet3
          ip address 10.9.9.9
-         ssl profile SSL-STUN
+         ssl profile STUN-DTLS
       server-profile MPLS-cv-pathfinder-pathfinder-Ethernet2
          ip address 172.16.0.1
-         ssl profile SSL-STUN
+         ssl profile STUN-DTLS
 !
 end
