--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/cv-pathfinder-pathfinder2.cfg
@@ -394,14 +394,14 @@ management api http-commands
       no shutdown
 !
 management security
-   ssl profile profileC
+   ssl profile profileB
       trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
-      certificate profileC.crt key profileC.key
+      certificate profileB.crt key profileB.key
 !
 stun
    server
       local-interface Ethernet1
       local-interface Ethernet2
-      ssl profile profileC
+      ssl profile profileB
 !
 end
