--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/autovpn-edge-no-default-policy.cfg
@@ -196,14 +196,14 @@ management api http-commands
       no shutdown
 !
 management security
-   ssl profile SSL-STUN
+   ssl profile STUN-DTLS
       trust certificate aristaDeviceCertProvisionerDefaultRootCA.crt
-      certificate SSL-STUN.crt key SSL-STUN.key
+      certificate STUN-DTLS.crt key STUN-DTLS.key
 !
 stun
    client
       server-profile INET-autovpn-rr3-Ethernet1
          ip address 10.7.7.7
-         ssl profile SSL-STUN
+         ssl profile STUN-DTLS
 !
 end
