--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/AUTOVPN_TESTS.yml
@@ -12,17 +12,17 @@ bgp_peer_groups:
     listen_range_prefixes:
       - 192.168.130.0/24
 
+wan_stun_dtls_disable: true
+
 wan_route_servers:
   # Testing having the interface configured with DHCP
   - hostname: autovpn-rr1
-    disable_stun_ssl: true
     path_groups:
       - name: INET
         interfaces:
           - name: Ethernet1
             ip_address: 10.7.7.7/31
   - hostname: autovpn-rr2
-    disable_stun_ssl: true
 
 wan_ipsec_profiles:
   control_plane:
