--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/CV_PATHFINDER_TESTS.yml
@@ -27,10 +27,11 @@ bgp_peer_groups:
       - 192.168.142.0/24
       - 192.168.143.0/24
 
+wan_stun_dtls_profile_name: profileA
+
 wan_route_servers:
   # Not testing the overloading
   - hostname: cv-pathfinder-pathfinder
-    stun_ssl_profile: profileA
 
 wan_ipsec_profiles:
   control_plane:
