--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/inventory/group_vars/UPLINK_LAN_TESTS.yml
@@ -26,9 +26,13 @@ wan_router: # dynamic_key: node_type
       id: 1
       uplink_switch_interfaces: [Ethernet1]
       uplink_native_vlan: 10
+      cv_pathfinder_region: region1
+      cv_pathfinder_site: site1
     - name: uplink_lan_wan_router2
       uplink_switch_interfaces: [Ethernet2]
       id: 2
+      cv_pathfinder_region: region1
+      cv_pathfinder_site: site2
 
 tenants: # dynamic_key: network_services
   - name: TEST
@@ -67,11 +71,12 @@ tenants: # dynamic_key: network_services
             ip_address: 10.0.102.1/24
             enabled: true
             tags: [l2leaf]
+
 wan_ipsec_profiles:
   control_plane:
     shared_key: test
 
-wan_mode: autovpn
+wan_mode: cv-pathfinder
 
 wan_route_servers: []
 wan_path_groups: []
@@ -84,3 +89,12 @@ wan_virtual_topologies:
   vrfs:
     - name: VRF1
       wan_vni: 123
+
+cv_pathfinder_regions:
+  - name: region1
+    id: 1
+    sites:
+      - name: site1
+        id: 1
+      - name: site2
+        id: 2
