Fixed precommit failure

--- a/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
+++ b/ansible_collections/arista/avd/roles/eos_cli_config_gen/schemas/eos_cli_config_gen.schema.yml
@@ -10238,10 +10238,8 @@ keys:
             type: bool
           eos_cli:
             type: str
-            description: 'Multiline EOS CLI rendered directly on the Router BGP, Address
+            description: Multiline EOS CLI rendered directly on the Router BGP, Address
               family EVPN in the final EOS configuration.
-
-              '
       address_family_rtc:
         type: dict
         keys:
