Feat(eos_designs): Option to define evpn_vlan_bundle for SVIs (#3623)
Co-authored-by: Claus Holbech <holbech@arista.com>

--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/configs/evpn_vlan_bundle.cfg
@@ -29,7 +29,43 @@ vlan 70
 vlan 80
    name vstorage
 !
+vlan 90
+   name vlan90
+!
+vlan 100
+   name vlan100
+!
+vlan 1008
+   name SVI_1
+!
+vlan 1009
+   name SVI_2
+!
+vlan 1010
+   name SVI_3
+!
+vlan 1011
+   name SVI_4
+!
+vlan 1012
+   name SVI_5
+!
+vlan 1013
+   name SVI_6
+!
+vlan 1014
+   name SVI_7
+!
+vlan 1015
+   name SVI_8
+!
 vrf instance MGMT
+!
+vrf instance SIT2
+!
+vrf instance SIT3
+!
+vrf instance SIT_VRF
 !
 interface Loopback0
    description EVPN_Overlay_Peering
@@ -41,6 +77,46 @@ interface Loopback1
    no shutdown
    ip address 10.11.0.3/32
 !
+interface Vlan1008
+   description SVI_1
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1009
+   description SVI_2
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1010
+   description SVI_3
+   no shutdown
+   vrf SIT_VRF
+!
+interface Vlan1011
+   description SVI_4
+   no shutdown
+   vrf SIT2
+!
+interface Vlan1012
+   description SVI_5
+   no shutdown
+   vrf SIT2
+!
+interface Vlan1013
+   description SVI_6
+   no shutdown
+   vrf SIT2
+!
+interface Vlan1014
+   description SVI_7
+   no shutdown
+   vrf SIT3
+!
+interface Vlan1015
+   description SVI_8
+   no shutdown
+   vrf SIT3
+!
 interface Vxlan1
    description evpn_vlan_bundle_VTEP
    vxlan source-interface Loopback1
@@ -51,9 +127,25 @@ interface Vxlan1
    vxlan vlan 60 vni 10060
    vxlan vlan 70 vni 10070
    vxlan vlan 80 vni 10080
+   vxlan vlan 90 vni 20090
+   vxlan vlan 100 vni 20100
+   vxlan vlan 1008 vni 21008
+   vxlan vlan 1009 vni 21009
+   vxlan vlan 1010 vni 21010
+   vxlan vlan 1011 vni 21011
+   vxlan vlan 1012 vni 21012
+   vxlan vlan 1013 vni 21013
+   vxlan vlan 1014 vni 21014
+   vxlan vlan 1015 vni 21015
+   vxlan vrf SIT2 vni 654789
+   vxlan vrf SIT3 vni 654555
+   vxlan vrf SIT_VRF vni 789654
 !
 ip routing
 no ip routing vrf MGMT
+ip routing vrf SIT2
+ip routing vrf SIT3
+ip routing vrf SIT_VRF
 !
 ip prefix-list PL-LOOPBACKS-EVPN-OVERLAY
    seq 10 permit 10.10.0.0/24 eq 32
@@ -96,6 +188,30 @@ router bgp 65101
       redistribute learned
       vlan 70,80
    !
+   vlan-aware-bundle bundle3
+      rd 1.1.1.1:333
+      route-target both 303:333
+      redistribute learned
+      vlan 90,100,1008-1009,1011-1012
+   !
+   vlan-aware-bundle bundle4
+      rd 1.1.1.1:444
+      route-target both 304:444
+      redistribute learned
+      vlan 1014-1015
+   !
+   vlan-aware-bundle SIT2
+      rd 10.10.0.3:655089
+      route-target both 655089:655089
+      redistribute learned
+      vlan 1013
+   !
+   vlan-aware-bundle SIT_VRF
+      rd 10.10.0.3:789954
+      route-target both 789954:789954
+      redistribute learned
+      vlan 1010
+   !
    vlan-aware-bundle storage_prod
       rd 10.10.0.3:10010
       route-target both 10010:10010
@@ -108,6 +224,27 @@ router bgp 65101
    address-family ipv4
       no neighbor EVPN-OVERLAY-PEERS activate
       neighbor IPv4-UNDERLAY-PEERS activate
+   !
+   vrf SIT2
+      rd 10.10.0.3:654789
+      route-target import evpn 654789:654789
+      route-target export evpn 654789:654789
+      router-id 10.10.0.3
+      redistribute connected
+   !
+   vrf SIT3
+      rd 10.10.0.3:654555
+      route-target import evpn 654555:654555
+      route-target export evpn 654555:654555
+      router-id 10.10.0.3
+      redistribute connected
+   !
+   vrf SIT_VRF
+      rd 10.10.0.3:789654
+      route-target import evpn 789654:789654
+      route-target export evpn 789654:789654
+      router-id 10.10.0.3
+      redistribute connected
 !
 management api http-commands
    protocol https
