--- a/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_vlan_bundle.yml
+++ b/ansible_collections/arista/avd/molecule/eos_designs_unit_tests/intended/structured_configs/evpn_vlan_bundle.yml
@@ -36,6 +36,49 @@ router_bgp:
     peer_groups:
     - name: EVPN-OVERLAY-PEERS
       activate: true
+  vrfs:
+  - name: SIT2
+    router_id: 10.10.0.3
+    rd: 10.10.0.3:654789
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 654789:654789
+      export:
+      - address_family: evpn
+        route_targets:
+        - 654789:654789
+    redistribute_routes:
+    - source_protocol: connected
+  - name: SIT3
+    router_id: 10.10.0.3
+    rd: 10.10.0.3:654555
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 654555:654555
+      export:
+      - address_family: evpn
+        route_targets:
+        - 654555:654555
+    redistribute_routes:
+    - source_protocol: connected
+  - name: SIT_VRF
+    router_id: 10.10.0.3
+    rd: 10.10.0.3:789654
+    route_targets:
+      import:
+      - address_family: evpn
+        route_targets:
+        - 789654:789654
+      export:
+      - address_family: evpn
+        route_targets:
+        - 789654:789654
+    redistribute_routes:
+    - source_protocol: connected
   vlan_aware_bundles:
   - name: bundle1
     rd: 10.10.0.3:201
@@ -56,6 +99,38 @@ router_bgp:
     redistribute_routes:
     - learned
     vlan: 70,80
+  - name: SIT2
+    rd: 10.10.0.3:655089
+    route_targets:
+      both:
+      - 655089:655089
+    redistribute_routes:
+    - learned
+    vlan: '1013'
+  - name: SIT_VRF
+    rd: 10.10.0.3:789954
+    route_targets:
+      both:
+      - 789954:789954
+    redistribute_routes:
+    - learned
+    vlan: '1010'
+  - name: bundle3
+    rd: 1.1.1.1:333
+    route_targets:
+      both:
+      - 303:333
+    redistribute_routes:
+    - learned
+    vlan: 90,100,1008-1009,1011-1012
+  - name: bundle4
+    rd: 1.1.1.1:444
+    route_targets:
+      both:
+      - 304:444
+    redistribute_routes:
+    - learned
+    vlan: 1014-1015
   - name: storage_prod
     tenant: StorageProd
     rd: 10.10.0.3:10010
@@ -75,6 +150,15 @@ vlan_internal_order:
 vrfs:
 - name: MGMT
   ip_routing: false
+- name: SIT2
+  tenant: SIT
+  ip_routing: true
+- name: SIT3
+  tenant: SIT
+  ip_routing: true
+- name: SIT_VRF
+  tenant: SIT
+  ip_routing: true
 management_api_http:
   enable_vrfs:
   - name: MGMT
@@ -120,6 +204,36 @@ vlans:
 - id: 80
   name: vstorage
   tenant: FABRIC
+- id: 1011
+  name: SVI_4
+  tenant: SIT
+- id: 1012
+  name: SVI_5
+  tenant: SIT
+- id: 1013
+  name: SVI_6
+  tenant: SIT
+- id: 1014
+  name: SVI_7
+  tenant: SIT
+- id: 1015
+  name: SVI_8
+  tenant: SIT
+- id: 1008
+  name: SVI_1
+  tenant: SIT
+- id: 1009
+  name: SVI_2
+  tenant: SIT
+- id: 1010
+  name: SVI_3
+  tenant: SIT
+- id: 90
+  name: vlan90
+  tenant: SIT
+- id: 100
+  name: vlan100
+  tenant: SIT
 - id: 10
   name: storage_prod
   tenant: StorageProd
@@ -128,6 +242,63 @@ vlans:
   tenant: StorageProd
 ip_igmp_snooping:
   globally_enabled: true
+vlan_interfaces:
+- name: Vlan1011
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_4
+  shutdown: false
+  vrf: SIT2
+- name: Vlan1012
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_5
+  shutdown: false
+  vrf: SIT2
+- name: Vlan1013
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_6
+  shutdown: false
+  vrf: SIT2
+- name: Vlan1014
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_7
+  shutdown: false
+  vrf: SIT3
+- name: Vlan1015
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_8
+  shutdown: false
+  vrf: SIT3
+- name: Vlan1008
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_1
+  shutdown: false
+  vrf: SIT_VRF
+- name: Vlan1009
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_2
+  shutdown: false
+  vrf: SIT_VRF
+- name: Vlan1010
+  tenant: SIT
+  tags:
+  - sit
+  description: SVI_3
+  shutdown: false
+  vrf: SIT_VRF
 vxlan_interface:
   Vxlan1:
     description: evpn_vlan_bundle_VTEP
@@ -143,7 +314,34 @@ vxlan_interface:
         vni: 10070
       - id: 80
         vni: 10080
+      - id: 1011
+        vni: 21011
+      - id: 1012
+        vni: 21012
+      - id: 1013
+        vni: 21013
+      - id: 1014
+        vni: 21014
+      - id: 1015
+        vni: 21015
+      - id: 1008
+        vni: 21008
+      - id: 1009
+        vni: 21009
+      - id: 1010
+        vni: 21010
+      - id: 90
+        vni: 20090
+      - id: 100
+        vni: 20100
       - id: 10
         vni: 10010
       - id: 20
         vni: 10020
+      vrfs:
+      - name: SIT2
+        vni: 654789
+      - name: SIT3
+        vni: 654555
+      - name: SIT_VRF
+        vni: 789654
